@startuml Car

class Transmission {
    -int currentGear
    +void shift_gears_up()
    +void shift_gears_down()
    +void reverse()
}


class Engine {
    +void start()
    +void stop()
    +void accelerate(int speed)
}




class SteerWheel {
    +void turn(float p_angle)
}



class Brake {
    +void decelerate(int speed)
}



class Car {
    -Brake brakes
    -SteerWheel steerwheel
    -Transmission transmission
    -Engine engine
    -int speed
    -int wheelsAngle
    -bool on

    +void start()
    +void stop()
    +void accelerate(int speed)
    +void shift_gears_up()
    +void shift_gears_down()
    +void reverse()
    +void turn_wheel(float angle)
    +void straighten_wheels()
    +void apply_force_on_brakes(int force)
    +void apply_emergency_brakes()
}

' RELATIONSHIPS

Car *-- Brake
Car *-- SteerWheel
Car *-- Transmission
Car *-- Engine

@enduml
